--- a/home/src/style/index.less
+++ b/home/src/style/index.less
@@ -15,3 +15,9 @@ a {
   text-decoration: none;
   color: rgb(84, 152, 247);
 }
+// 避免抽屉展开使布局发生抖动---始
+//.el-popup-parent--hidden {
+//  overflow: visible;
+//}
+// 避免抽屉展开使布局发生抖动---末
+
