--- a/home/src/components/ItemDetailPage/index.less
+++ b/home/src/components/ItemDetailPage/index.less
@@ -26,11 +26,15 @@
       height: 100%;
       border-radius: 10%;
     }
-
     .el-row {
       // 间隔
       border-radius: 5px;
     }
+
+    .card-default-col {
+      padding-left: 20px
+    }
+
     // 表格描述
     .card-descriptions{
 
