--- a/home/src/style/index.less
+++ b/home/src/style/index.less
@@ -21,3 +21,11 @@ a {
 //}
 // 避免抽屉展开使布局发生抖动---末
 
+// 定义nprogress进度条样式
+#nprogress .bar {
+ /* 自定义颜色 需要加上!important;，这里加了渐变色 */
+ background-color: #FFFFFF !important;
+ // 上中下三层颜色渐变叠加
+ background-image: linear-gradient(0deg, #FFFFFF 0%, #c8fefc 50%, #fff8b1 100%) !important;
+ height: 6px !important;
+}
