update：项目迁移前的提交

--- a/home/src/layout/SideMenu/index.less
+++ b/home/src/layout/SideMenu/index.less
@@ -5,3 +5,11 @@
 .el-col {
   display: inline-table;
 }
+
+// 翻转卡片
+.flip-card {
+  width: 150px;
+  height: 40px;
+  margin-left: 20px;
+  margin-top: 10px
+}
