--- a/home/src/views/Error/404/index.less
+++ b/home/src/views/Error/404/index.less
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url("../img/404backImg.png") no-repeat center center / cover;
+  background: url("../img/404backImg.jpg") no-repeat center center / cover;
   height: 100vh; // 使用视口单位
   width: 100%;
 }
